[package]
name = "rust_rpi_4wd_car"
version = "0.0.5"
description = "Rust code for Yahboom 4WD smart robot for Raspberry Pi 4B"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.40"
ctrlc = { version ="3.1.8", features = ["termination"] }
embedded-hal = { version = "0.2.4", features = ["unproven"] }
rppal = {git = "https://github.com/golemparts/rppal", features = ["hal", "hal-unproven"]}
thiserror = "1.0.24"
tokio = "1.4.0"
