[package]
name = "rust_rpi_4wd_car"
version = "0.0.11"
description = "Rust code for Yahboom 4WD smart robot for Raspberry Pi 4B"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
edition = "2018"
keywords = ["raspberry", "pi", "robot", "yahboom"]
categories = ["embedded", "hardware-support", "os"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Oxidized-Robots/rust_rpi_4wd_car"
readme = "README.md"
repository = "https://github.com/Oxidized-Robots/rust_rpi_4wd_car"

[dependencies]
anyhow = "1.0.40"
ctrlc = { version = "3.1.9", features = ["termination"] }
embedded-hal = { version = "0.2.4", features = ["unproven"] }
rppal = { version = "0.12.0", features = ["hal", "hal-unproven"] }
thiserror = "1.0.24"
tokio = "1.5.0"
